# s3d

./: .env.example  .gitignore  README.md
crates/s3d-cli/: Cargo.toml
crates/s3d-cli/src/: config.rs  main.rs
crates/s3d-cli/src/commands/: build.rs  diff.rs  init.rs  mod.rs  push.rs  validate.rs
crates/s3d-cli/src/storage/: credentials.rs  mod.rs  r2.rs  sign.rs
crates/s3d-deploy/: Cargo.toml
crates/s3d-deploy/src/: collect.rs  diff.rs  hash.rs  lib.rs  manifest.rs
crates/s3d-deploy/tests/: pipeline.rs
crates/s3d-deploy/tests/fixtures/assets/models/: scene.gltf
crates/s3d-display/: Cargo.toml
crates/s3d-display/src/: config.rs  iframe.rs  lib.rs  output.rs  plugin.rs  template.rs
crates/s3d-loader/: Cargo.toml
crates/s3d-loader/src/: cache.rs  diff.rs  fetcher.rs  lib.rs  strategy.rs
crates/s3d-loader/tests/: loader_flow.rs
crates/s3d-types/: Cargo.toml
crates/s3d-types/src/: asset.rs  config.rs  lib.rs  loader.rs  manifest.rs  plugin.rs
