[package]
name = "s3d-cli"
version = "0.1.0"
edition = "2021"
description = "s3d — static 3D asset deployment CLI"
default-run = "s3d"

[[bin]]
name = "s3d"
path = "src/main.rs"

[dependencies]
s3d-types  = { path = "../s3d-types" }
s3d-deploy = { path = "../s3d-deploy" }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Coloured terminal output
colored = "2"

# Error handling
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

# HTTP client for R2/S3 REST API
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# HMAC-SHA256 for AWS Signature V4
hmac   = "0.12"
sha2   = "0.10"
hex    = "0.4"

# .env loading
dotenvy = "0.15"

# Interactive prompts
dialoguer = "0.11"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Time (URL signing)
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

# Futures
futures = "0.3"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
mockito  = "1"
