[package]
name = "s3d-deploy"
version = "0.1.0"
edition = "2021"

[dependencies]
s3d-types = { path = "../s3d-types" }

# ファイルシステム走査
walkdir = "2"

# glob パターンマッチング
globset = "0.4"

# SHA-256 ハッシュ
sha2 = "0.10"
hex = "0.4"

# MIME タイプ推定
mime_guess = "2"

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラーハンドリング
thiserror = "2"

[dev-dependencies]
tempfile = "3"
